force-app/main/default/objects/Test_Staging__c/Test_Staging__c.object-meta.xml
<CustomObject>
    <description>Test Results
Ref Integrity Tests</description>
    <label>Test Staging</label>
    <nameField>
        <label>Test Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>