force-app/main/default/objects/Test_Staging__c/fields/Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign__c</fullName>
    <label>Call Sign</label>
    <length>225</length>
    <type>Text</type>
</CustomField>