force-app/main/default/objects/Test_Staging__c/fields/Cantino_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Cantino_Table_Name__c</fullName>
    <description>Used to capture the Table Name of Cantino</description>
    <label>Cantino Table Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>