force-app/main/default/objects/Test_Staging__c/fields/Last_Failed__c.field-meta.xml
<CustomField>
    <fullName>Last_Failed__c</fullName>
    <label>Last Failed</label>
    <type>Date</type>
</CustomField>