force-app/main/default/objects/Test_Staging__c/fields/Test_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Id__c</fullName>
    <description>Test_Id Associated with the Test Description, required to make the External_Id unique</description>
    <label>Test Id</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>