force-app/main/default/objects/Test_Staging__c/fields/Unique_System_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_System_Identifier__c</fullName>
    <label>Unique_System_Identifier</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>